syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

message Distribution{
  string id = 1;
}

message AddDistributionRequest{
  repeated Distribution distributions = 1;
}

message AddDistributionReply{}

message ListDistributionRequest{}

message ListDistributionReply{
  repeated Distribution distributions = 1;
}

message DropDistributionRequest{
  repeated string ids = 1;
}

message DropDistributionReply{}

message AlterDistributionAttachRequest{
  string table = 1;
  Distribution distrinution = 2;
}

message AlterDistributionAttachReply{}

message GetDistributionRequest{
  string table = 1;
}

message GetDistributionReply {
  Distribution distrinution = 1;
}

service DistributionService {
  rpc AddDistribution(AddDistributionRequest) returns (AddDistributionReply) {}
  rpc DropDistribution(DropDistributionRequest) returns (DropDistributionReply) {}
  rpc ListDistribution(ListDistributionRequest) returns (ListDistributionReply) {}
  rpc AlterDistributionAttach(AlterDistributionAttachRequest) returns (AlterDistributionAttachReply) {}
  rpc GetDistribution(GetDistributionRequest) returns (GetDistributionReply) {}
}
